2012-05-18  Karl Berry  <karl@tug.org>

	* pmx-2.6.18.

2012-04-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* w32getc.c (new): Handle DOS line endings (on Windows).
	Mail from Akira, 31 Mar 2012 21:36:26.
	* Makefile.am [WIN32]: Add the new file.

2012-03-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* arith.h (new): Dummy header to avoid the need to run arithchk.
	* Makefile.am, configure.ac: Modified to allow cross compilation.

	* pmx.lua, pmx.1, pmxab.1, scor2prt.1: New files from CTAN
	(http://mirrors.ctan.org/support/pmx/pmx-texmf.zip).
	* pmx.test: New shell script for tests.
	* tests/barsant*: Test input and expected output.
	* Makefile.am, configure.ac: Add the new files.

2012-03-26  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt pmx-2.6.17 to the TeX Live build system.

Copyright (C) 2012 Peter Breitenlohner <tex-live@tug.org>
You may freely use, modify and/or distribute this file.